---
source: src/codegen/tests/initialization_test/global_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%commands = type { i8, i8 }

@__commands__init = unnamed_addr constant %commands zeroinitializer
@__main.myStr1__init = unnamed_addr constant [81 x i8] zeroinitializer

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %cmd1 = alloca %commands, align [filtered]
  %myStr1 = alloca [81 x i8], align [filtered]
  %myArr1 = alloca [4 x i16], align [filtered]
  %cmd2 = alloca %commands, align [filtered]
  %myArr2 = alloca [4 x i16], align [filtered]
  %0 = bitcast %commands* %cmd1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %0, i8* align [filtered] getelementptr inbounds (%commands, %commands* @__commands__init, i32 0, i32 0), i64 ptrtoint (%commands* getelementptr (%commands, %commands* null, i32 1) to i64), i1 false)
  %1 = bitcast [81 x i8]* %myStr1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %1, i8* align [filtered] getelementptr inbounds ([81 x i8], [81 x i8]* @__main.myStr1__init, i32 0, i32 0), i64 ptrtoint ([81 x i8]* getelementptr ([81 x i8], [81 x i8]* null, i32 1) to i64), i1 false)
  %2 = bitcast [4 x i16]* %myArr1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align [filtered] %2, i8 0, i64 ptrtoint ([4 x i16]* getelementptr ([4 x i16], [4 x i16]* null, i32 1) to i64), i1 false)
  %3 = bitcast %commands* %cmd2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %3, i8* align [filtered] getelementptr inbounds (%commands, %commands* @__commands__init, i32 0, i32 0), i64 ptrtoint (%commands* getelementptr (%commands, %commands* null, i32 1) to i64), i1 false)
  %4 = bitcast [4 x i16]* %myArr2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align [filtered] %4, i8 0, i64 ptrtoint ([4 x i16]* getelementptr ([4 x i16], [4 x i16]* null, i32 1) to i64), i1 false)
  store i32 0, i32* %main, align [filtered]
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

; Function Attrs: argmemonly nofree nounwind willreturn writeonly
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

attributes #0 = { argmemonly nofree nounwind willreturn }
attributes #1 = { argmemonly nofree nounwind willreturn writeonly }
